--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
           <button class="botão-login">Entrar</button>
         </div>
       </form>
+      <footer>
+        feito com carinho
+      </footer>
     <script>
         alert("Olá! Seja bem vindo")
     </script>
